sowka theme: fix overflow in facebook widget

--- a/themes/sowka/style.css
+++ b/themes/sowka/style.css
@@ -1295,3 +1295,6 @@ background-position: -76px 0px;
 .login-facebook {
     top: 3px;
 }
+.fb_iframe_widget span {
+    overflow: hidden;
+}
